# Project

./: .gitignore
Ex1-build/: CylinderExample.slnx
Ex1-build/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
Ex1-build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate
Ex1-build/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
Ex1-build/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
Ex2-build/: vtkexample_vr1.slnx
Ex2-build/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
Ex2-build/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
Exercise1/: CMakeLists.txt  CylinderExample.cxx
Exercise3/: .gitignore  CMakeLists.txt  ModelPart.cpp  ModelPart.h  ModelPartList.cpp  VRRenderThread.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.cpp  optiondialog.h  optiondialog.ui  resources.qrc
